--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -6,7 +6,7 @@
 @font-face {
    font-family: 'weather_sunday_-_personal_uRg';
    src: url('../fonts/weathersundaypersonaluse-d5qx-webfont.woff2') format('woff2'),
-   	  url('../fonts/weathersundaypersonaluse-d5qx-webfont.woff') format('woff');
+	  url('../fonts/weathersundaypersonaluse-d5qx-webfont.woff') format('woff');
    font-weight: normal;
    font-style: normal;
 }
@@ -14,6 +14,8 @@
 
 /* ===== VARIABLES CSS ===== */
 :root{
+	--header-height: 3rem;
+
 	/* ===== Colors ===== */
 	--blue-color: #1A508B;
 	--navy-color: #172774;
@@ -30,6 +32,7 @@
 	--h3-font-size: 1rem;
 	--h4-font-size: 1.1rem;
 	--normal-font-size: .938rem;
+	--small-font-size: .725rem;
 
 	/* ===== Font Weight ===== */
 	--regular-font: 400;
@@ -45,9 +48,8 @@
 	--mb-6: 3rem;
 
 	/* ===== z-index ===== */
-	--z-toggle: 100;
-	--z-menu: 200;
-	--z-popup: 300;
+	--z-fixed: 100;
+	--z-popup: 200;
 }
 @media screen and (min-width: 768px){
 	:root{
@@ -108,6 +110,14 @@ img{
 	display: grid;
 	grid-gap: 1.5rem;
 }
+.l-header{
+	position: fixed;
+	top: 0;
+	left: 0;
+	width: 100%;
+	background-color: transparent;
+	z-index: var(--z-fixed);
+}
 /* ===== end layout ===== */
 
 /* ===== CSS CLASS ===== */
@@ -127,13 +137,13 @@ img{
 	display: -ms-grid;
 	display: grid;
 	-ms-grid-columns: (auto)[2];
-	    grid-template-columns: repeat(2,auto);
+		grid-template-columns: repeat(2,auto);
 	-webkit-box-pack: center;
-	    -ms-flex-pack: center;
-	        justify-content: center;
+		-ms-flex-pack: center;
+			justify-content: center;
 	-webkit-column-gap: .7rem;
 	   -moz-column-gap: .7rem;
-	        column-gap: .7rem;
+			column-gap: .7rem;
 }
 .social__media-link{
 	background-color: var(--blue-color);
@@ -153,11 +163,11 @@ img{
 	display: -ms-inline-flexbox;
 	display: inline-flex;
 	-webkit-box-pack: center;
-	    -ms-flex-pack: center;
-	        justify-content: center;
+		-ms-flex-pack: center;
+			justify-content: center;
 	-webkit-box-align: center;
-	    -ms-flex-align: center;
-	        align-items: center;
+		-ms-flex-align: center;
+			align-items: center;
 	background-color: var(--blue-color);
 	color: var(--white-color);
 	padding: 0.5rem 1.5rem;
@@ -171,106 +181,90 @@ img{
 /* ===== end buttons ===== */
 
 /* ===== NAV ===== */
-.nav__toggle{
-	width: 40px;
-	height: 40px;
-	border-radius: 50%;
-	background-color: var(--navy-color);
-	color: var(--white-color);
-	display: -webkit-box;
-	display: -ms-flexbox;
+.nav{
+	height: var(--header-height);
 	display: flex;
-	-webkit-box-pack: center;
-	    -ms-flex-pack: center;
-	        justify-content: center;
-	-webkit-box-align: center;
-	    -ms-flex-align: center;
-	        align-items: center;
-	cursor: pointer;
-	position: fixed;
-	left: 1rem;
-	bottom: 1.2rem;
-	z-index: var(--z-toggle);
+	justify-content: space-between;
+	align-items: center;
 }
-.menu__icon{
-	font-size: 1.5rem;
+@media screen and (max-width: 767px){
+	.nav__menu{
+		position: fixed;
+		bottom: 0;
+		left: 0;
+		height: 64px;
+		height: 4rem;
+		width: 100%;
+		padding: 0 16px;
+		padding: 0 1rem;
+		display: -ms-grid;
+		display: grid;
+		-ms-grid-row-align: center;
+		    align-items: center;
+		background-color: #F7F6F2;
+		border-radius: 1.25rem 1.25rem 0 0;
+		-webkit-transition: .4s;
+		transition: .4s;
+	}
 }
-.nav__menu{
-	background-color: var(--white-color);
-	padding: 1rem;
-	border-radius: .5rem;
-	position: fixed;
-	left: 1rem;
-	bottom: 1.2rem;
-	-webkit-transition: .4s;
-	transition: .4s;
-	z-index: var(--z-menu);
+.nav__logo{
+	color: var(--text-color);
+	font-weight: var(--semi-bold-font);
 	display: none;
 }
-.nav__item{
-	margin-bottom: var(--mb-3);
-	cursor: pointer;
-}
-.nav__item:last-child{
-	margin-bottom: 0;
-}
-.nav__icon{
-	font-size: 1.3rem;
-	color: var(--blue-color);
-}
+.nav__list,
 .nav__link{
 	display: -webkit-box;
 	display: -ms-flexbox;
 	display: flex;
-	-webkit-box-pack: center;
-	    -ms-flex-pack: center;
-	        justify-content: center;
-	-webkit-box-align: center;
-	    -ms-flex-align: center;
-	        align-items: center;
+}
+.nav__list{
+	-ms-flex-pack: distribute;
+	    justify-content: space-around;
+}
+.nav__link{
 	-webkit-box-orient: vertical;
 	-webkit-box-direction: normal;
 	    -ms-flex-direction: column;
 	        flex-direction: column;
-	color: var(--text-color);
-	font-weight: var(--medium-font);
-}
-.nav__close{
-	position: absolute;
-	top: -0.75rem;
-	right: -0.75rem;
-	width: 30px;
-	height: 30px;
-	background-color: #F33535;
-	color: var(--white-color);
-	display: -webkit-box;
-	display: -ms-flexbox;
-	display: flex;
-	-webkit-box-pack: center;
-	    -ms-flex-pack: center;
-	        justify-content: center;
 	-webkit-box-align: center;
 	    -ms-flex-align: center;
+	            -ms-grid-row-align: center;
 	        align-items: center;
-	font-size: 1.2rem;
-	border-radius: 50%;
-	cursor: pointer;
+	font-weight: var(--semi-bold-font);
+	color: var(--text-color);
+}
+.nav__name{
+	font-size: var(--small-font-size);
+}
+.nav__icon{
+	font-size: 24px;
+	font-size: 1.5rem;
 }
 
-/* Show Menu */
-.show-menu{
-	display: block;
-}
-
-/* Active Menu */
+/* Active Link */
 .active-link{
-	background-color: var(--blue-color);
-	color: var(--white-color);
-	padding: 0.5rem 1rem;
-	border-radius: .5rem;
+	position: relative;
+	color: var(--blue-color);
+	-webkit-transition: .3s;
+	transition: .3s;
 }
-.active-link .nav__icon{
-	color: var(--white-color);
+.active-link:before{
+	content: '';
+	position: absolute;
+	bottom: -4.8px;
+	bottom: -.3rem;
+	width: 4px;
+	height: 4px;
+	border-radius: 50%;
+	background-color: var(--blue-color);
+	display: none;
+}
+
+/* Change background header */
+.scroll-header{
+	background-color: var(--white-color);
+	box-shadow: 0 2px 4px rgba(0,0,0,.1);
 }
 /* ===== end nav ===== */
 
@@ -285,11 +279,11 @@ img{
 	display: -ms-flexbox;
 	display: flex;
 	-webkit-box-pack: center;
-	    -ms-flex-pack: center;
-	        justify-content: center;
+		-ms-flex-pack: center;
+			justify-content: center;
 	-webkit-box-align: center;
-	    -ms-flex-align: center;
-	        align-items: center;
+		-ms-flex-align: center;
+			align-items: center;
 }
 .home__content{
 	text-align: center;
@@ -405,18 +399,18 @@ img{
 	display: -ms-flexbox;
 	display: flex;
 	-webkit-box-pack: center;
-	    -ms-flex-pack: center;
-	        justify-content: center;
+		-ms-flex-pack: center;
+			justify-content: center;
 	-webkit-box-align: center;
-	    -ms-flex-align: center;
-	        align-items: center;
+		-ms-flex-align: center;
+			align-items: center;
 	margin-bottom: var(--mb-2);
 }
 .event__icon{
 	width: 65px;
 	filter: url('data:image/svg+xml;charset=utf-8,<svg xmlns="http://www.w3.org/2000/svg"><filter id="filter"><feComponentTransfer color-interpolation-filters="sRGB"><feFuncR type="table" tableValues="1 0" /><feFuncG type="table" tableValues="1 0" /><feFuncB type="table" tableValues="1 0" /></feComponentTransfer></filter></svg>#filter');
 	-webkit-filter: invert(1) !important;
-	        filter: invert(1) !important;
+			filter: invert(1) !important;
 }
 .event__place{
 	margin-top: 1.5rem;
@@ -432,7 +426,7 @@ img{
 /* ===== TIMER ===== */
 .timer__container{
 	-ms-grid-columns: (minmax(100px,1fr))[auto-fit];
-	    grid-template-columns: repeat(auto-fit, minmax(100px,1fr));
+		grid-template-columns: repeat(auto-fit, minmax(100px,1fr));
 	place-items: center !important;
 }
 .timer__box{
@@ -445,15 +439,15 @@ img{
 	display: -ms-flexbox;
 	display: flex;
 	-webkit-box-pack: center;
-	    -ms-flex-pack: center;
-	        justify-content: center;
+		-ms-flex-pack: center;
+			justify-content: center;
 	-webkit-box-align: center;
-	    -ms-flex-align: center;
-	        align-items: center;
+		-ms-flex-align: center;
+			align-items: center;
 	-webkit-box-orient: vertical;
 	-webkit-box-direction: normal;
-	    -ms-flex-direction: column;
-	        flex-direction: column;
+		-ms-flex-direction: column;
+			flex-direction: column;
 }
 .timer__number{
 	font-size: var(--h1-font-size);
@@ -536,9 +530,9 @@ img{
 	width: 100%;
 	background: var(--blue-color);
 	-webkit-transform: scaleX(0);
-	        transform: scaleX(0);
+			transform: scaleX(0);
 	-webkit-transform-origin: center;
-	        transform-origin: center;
+			transform-origin: center;
 	-webkit-transition: -webkit-transform 0.3s ease;
 	transition: -webkit-transform 0.3s ease;
 	transition: transform 0.3s ease;
@@ -550,7 +544,7 @@ img{
 .message__textarea:valid ~ .underline:before
 {
 	-webkit-transform: scaleX(1);
-	        transform: scaleX(1);
+			transform: scaleX(1);
 }
 .message__button{
 	width: 100%;
@@ -564,8 +558,8 @@ img{
    display: -ms-flexbox;
    display: flex;
    -webkit-box-align: center;
-       -ms-flex-align: center;
-           align-items: center;
+	   -ms-flex-align: center;
+		   align-items: center;
 }
 #message-respon div.yes i,
 #message-respon div.no i{
@@ -621,11 +615,11 @@ footer .social__media-link{
 	display: -ms-flexbox;
 	display: flex;
 	-webkit-box-pack: center;
-	    -ms-flex-pack: center;
-	        justify-content: center;
+		-ms-flex-pack: center;
+			justify-content: center;
 	-webkit-box-align: center;
-	    -ms-flex-align: center;
-	        align-items: center;
+		-ms-flex-align: center;
+			align-items: center;
 	position: fixed;
 	right: 1rem;
 	bottom: 5rem;
@@ -636,7 +630,7 @@ footer .social__media-link{
 	   object-fit: cover;
 	filter: url('data:image/svg+xml;charset=utf-8,<svg xmlns="http://www.w3.org/2000/svg"><filter id="filter"><feComponentTransfer color-interpolation-filters="sRGB"><feFuncR type="table" tableValues="1 0" /><feFuncG type="table" tableValues="1 0" /><feFuncB type="table" tableValues="1 0" /></feComponentTransfer></filter></svg>#filter');
 	-webkit-filter: invert(1) !important;
-	        filter: invert(1) !important;
+			filter: invert(1) !important;
 	cursor: pointer;
 }
 /* ===== end backsound ===== */
@@ -653,11 +647,11 @@ footer .social__media-link{
 	display: -ms-flexbox;
 	display: flex;
 	-webkit-box-pack: center;
-	    -ms-flex-pack: center;
-	        justify-content: center;
+		-ms-flex-pack: center;
+			justify-content: center;
 	-webkit-box-align: center;
-	    -ms-flex-align: center;
-	        align-items: center;
+		-ms-flex-align: center;
+			align-items: center;
 	z-index: 10;
 	-webkit-transition: .4s;
 	transition: .4s;
@@ -685,7 +679,7 @@ footer .social__media-link{
 	overflow: hidden;
 	background-color: rgba(0,0,0,.7);
 	-webkit-backdrop-filter: blur(15px);
-	        backdrop-filter: blur(15px);
+			backdrop-filter: blur(15px);
 	z-index: var(--z-popup);
 }
 .popup__container{
@@ -694,15 +688,15 @@ footer .social__media-link{
 	display: -ms-flexbox;
 	display: flex;
 	-webkit-box-pack: center;
-	    -ms-flex-pack: center;
-	        justify-content: center;
+		-ms-flex-pack: center;
+			justify-content: center;
 	-webkit-box-align: center;
-	    -ms-flex-align: center;
-	        align-items: center;
+		-ms-flex-align: center;
+			align-items: center;
 	-webkit-box-orient: vertical;
 	-webkit-box-direction: normal;
-	    -ms-flex-direction: column;
-	        flex-direction: column;
+		-ms-flex-direction: column;
+			flex-direction: column;
 	text-align: center;
 }
 .popup__content{
@@ -722,7 +716,7 @@ footer .social__media-link{
 	width: 50px;
 	background-color: var(--text-color);
 	-webkit-transform: rotate(90deg);
-	        transform: rotate(90deg);
+			transform: rotate(90deg);
 	margin: var(--mb-1) auto;
 }
 .popup__subtitle2{
@@ -737,6 +731,16 @@ footer .social__media-link{
 /* ===== end pop up ===== */
 
 /* ===== MEDIA QUERIS ===== */
+@media screen and (max-width: 320px){
+	/* ===== NAV ===== */
+	.nav__name{
+		display: none;
+	}
+	.active-link::before{
+		display: block;
+	}
+	/* ===== end nav ===== */
+}
 @media screen and (max-width: 568px){
 	/* ===== HOME ===== */
 	.home{
@@ -756,7 +760,7 @@ footer .social__media-link{
 	.couple__container,
 	.event__container{
 		-ms-grid-columns: (1fr)[2];
-		    grid-template-columns: repeat(2,1fr);
+			grid-template-columns: repeat(2,1fr);
 	}
 	/* ===== end couple + event ===== */
 
@@ -767,18 +771,48 @@ footer .social__media-link{
 	/* ===== end pop up ===== */
 }
 
-@media screen and (min-width: 768px){
-	/* ===== LAYOUT ===== */
-	.section{
-		padding-top: 5rem;
+@media screen and (max-width: 768px){
+	.l-header{
+		background-color: transparent !important;
 	}
-	/* ===== end layout ===== */
+	.scroll-header{
+		box-shadow: none !important;
+	}
+}
+
+@media screen and (min-width: 768px){
+	/* ===== CLASS CSS ===== */
+	.section{
+		padding-top: 7rem;
+	}
+	/* ===== end class css ===== */
+
+	/* ===== NAV ===== */
+	.nav{
+		height: calc(var(--header-height) + 1rem);
+	}
+	.nav__logo{
+		display: block;
+	}
+	.nav__icon{
+		display: none !important;
+	}
+	.nav__name{
+		font-size: var(--normal-font-size);
+	}
+	.nav__item:not(:last-child){
+		margin-right: var(--mb-4);
+	}
+	.active-link::before{
+		display: block;
+	}
+	/* ===== end nav ====== */
 
 	/* ===== COUPLE ===== */
 	.couple__container{
 		-webkit-column-gap: 2rem;
 		   -moz-column-gap: 2rem;
-		        column-gap: 2rem;
+				column-gap: 2rem;
 	}
 	/* ===== end couple ===== */
 
@@ -825,8 +859,7 @@ footer .social__media-link{
 	.couple__container{
 		-webkit-column-gap: 6rem;
 		   -moz-column-gap: 6rem;
-		        column-gap: 6rem;
+				column-gap: 6rem;
 	}
 	/* ===== end couple ===== */
 }
-/* ===== end media queris ===== */
