--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -778,6 +778,9 @@ footer .social__media-link{
 	.scroll-header{
 		box-shadow: none !important;
 	}
+	footer{
+		padding-bottom: 6.5rem;
+	}
 }
 
 @media screen and (min-width: 768px){
